Изменения перед первым занятием и в процессе 1-ого занятия